fix z-index of sidebar

--- a/client/less/style.less
+++ b/client/less/style.less
@@ -65,6 +65,7 @@ body{
 
 /* --- Menu --- */
 .navbar-default{
+  z-index: 1;
   margin-bottom: 0;
 }
 
@@ -1237,7 +1238,6 @@ form{
 }
 
 #sidebar-wrapper {
-    z-index: -1;
     position: absolute;
     left: 90px;
     top: 0;
